force-app/main/default/objects/Ts_DataChange__e/Ts_DataChange__e.object-meta.xml
<CustomObject>
    <label>Ts DataChange</label>
    <pluralLabel>Ts DataChanges</pluralLabel>
</CustomObject>