force-app/main/default/objects/Ts_DataChange__e/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>ObjectApiName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>