force-app/main/default/objects/Ts_DataChange__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>