force-app/main/default/objects/Ts_DataChange__e/fields/SourceOrgHost__c.field-meta.xml
<CustomField>
    <fullName>SourceOrgHost__c</fullName>
    <label>SourceOrgHost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>