force-app/main/default/objects/Ts_DataChange__e/fields/TargetOrgHost__c.field-meta.xml
<CustomField>
    <fullName>TargetOrgHost__c</fullName>
    <label>TargetOrgHost</label>
    <length>80</length>
    <type>Text</type>
</CustomField>